--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "electron": "^36.4.0"
   },
   "dependencies": {
-    "active-win": "^8.2.1"
+    "active-win": "^8.2.1",
+    "node-fetch": "^3.3.2"
   }
 }
