--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "active-win": "^8.2.1",
     "electron-store": "^10.0.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "play-sound": "^1.1.6"
   }
 }
