--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,6 @@
   "dependencies": {
     "active-win": "^8.2.1",
     "electron-store": "^10.0.1",
-    "node-fetch": "^3.3.2",
-    "play-sound": "^1.1.6"
+    "node-fetch": "^3.3.2"
   }
 }
